# tauri_ipmsg

./: Cargo.toml  Dioxus.toml  README.md
assets/: chat.css  main.css
assets/chat/: chat_area.css  common.css  conversation_list.css  input_area.css  message_list.css  settings_modal.css  sidebar.css
src/: app.rs  main.rs  models.rs  tauri.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main-window.json  settings-window.json
src-tauri/src/: config.rs  lib.rs  main.rs  state.rs
src-tauri/src/ipmsg_core/: mod.rs  protocol.rs
src/views/: chat.rs  home.rs  mod.rs  settings.rs
src/views/chat/: chat_area.rs  conversation_list.rs  input_area.rs  message_list.rs  mod.rs  sidebar.rs
