[package]
name = "ipmsg-tauri-ui"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dioxus = { version = "0.7", features = ["web", "router"] }
dioxus-free-icons = { version = "0.10.0", features = ["font-awesome-solid"] }
dioxus-logger = "0.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0.149"
gloo-timers = { version = "0.3.0", features = ["futures"] }

[workspace]
members = ["src-tauri"]
